lnrpc: add ChannelUpdate2 type
